# home

./: .gitignore  CNAME  archive.html  home.cabal  stack.yaml  sync.sh
.github/workflows/: publish.yml
