name:               home
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.13.*
                  , base16-bytestring == 0.1.*
  ghc-options:      -threaded
  default-language: Haskell2010
